--- a/sobreMi.html
+++ b/sobreMi.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <nav class="header_menu">
-            <a class="header_menu_link" href="indext.html">Home</a>
+            <a class="header_menu_link" href="index.html">Home</a>
             <a class="header_menu_link" href="sobreMi.html">Sobre mi</a>
         </nav>
     </header>
